[gd_scene load_steps=14 format=3 uid="uid://cm4jsnjutjfu6"]

[ext_resource type="Script" path="res://scripts/battle/combatant/combatant_node.gd" id="1_d8qkc"]
[ext_resource type="Texture2D" uid="uid://id2gjt271bko" path="res://graphics/ui/ui_target_unselected.png" id="2_7l61i"]
[ext_resource type="Texture2D" uid="uid://l1mon0vxhkb5" path="res://graphics/ui/sprite_button_focused.png" id="2_uia2j"]
[ext_resource type="Texture2D" uid="uid://u5ng7o44k1ln" path="res://graphics/ui/ui_target_selected.png" id="3_ng771"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="3_o4uc1"]
[ext_resource type="PackedScene" uid="uid://dhtlgjfm14evh" path="res://prefabs/ui/texture_sfx_button.tscn" id="6_k1o8q"]
[ext_resource type="PackedScene" uid="uid://ffos7xabqx5j" path="res://prefabs/battle/particles/particle_emitter.tscn" id="11_231h2"]
[ext_resource type="Texture2D" uid="uid://dory1vdxd41t" path="res://graphics/ui/health_bar_bg.png" id="13_ff1jw"]
[ext_resource type="Resource" uid="uid://c6c4ckakjjq0h" path="res://gamedata/moves/particles_hit.tres" id="14_nv53v"]
[ext_resource type="Texture2D" uid="uid://bm1nhtfi2l8tn" path="res://graphics/ui/health_bar_monochrome.png" id="14_psvf6"]
[ext_resource type="Resource" uid="uid://san44exp8d7j" path="res://gamedata/moves/particles_shard.tres" id="15_gu381"]
[ext_resource type="StyleBox" uid="uid://lxxvcevm620f" path="res://themes/hp_tag_panel.tres" id="17_ath4t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_klmqu"]

[node name="CombatantNode" type="Node2D" groups=["CombatantNode"]]
script = ExtResource("1_d8qkc")

[node name="ClickCombatantBtn" parent="." instance=ExtResource("6_k1o8q")]
visible = false
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
texture_focused = ExtResource("2_uia2j")

[node name="SelectCombatantBtn" parent="." instance=ExtResource("6_k1o8q")]
custom_minimum_size = Vector2(8, 8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("2_7l61i")
texture_pressed = ExtResource("3_ng771")
texture_focused = ExtResource("2_uia2j")
stretch_mode = 5

[node name="BehindParticleContainer" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="BehindParticleEmitter" parent="BehindParticleContainer" instance=ExtResource("11_231h2")]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_klmqu")

[node name="FrontParticleContainer" type="Node2D" parent="."]

[node name="FrontParticleEmitter" parent="FrontParticleContainer" instance=ExtResource("11_231h2")]
scale = Vector2(1.5, 1.5)

[node name="HitParticleEmitter" parent="FrontParticleContainer" instance=ExtResource("11_231h2")]
scale = Vector2(1.5, 1.5)
preset = ExtResource("14_nv53v")
particles = 3
waves = 1.0
duration = 0.5

[node name="ShardParticleEmitter" parent="FrontParticleContainer" instance=ExtResource("11_231h2")]
scale = Vector2(1.5, 1.5)
preset = ExtResource("15_gu381")
lifetime = 0.75
particles = 6
waves = 0.9
duration = 0.675

[node name="HPTag" type="Panel" parent="."]
custom_minimum_size = Vector2(63, 0)
offset_left = 6.0
offset_top = -7.0
offset_right = 69.0
offset_bottom = 7.0
theme = ExtResource("3_o4uc1")
theme_override_styles/panel = ExtResource("17_ath4t")

[node name="LvText" type="RichTextLabel" parent="HPTag"]
clip_contents = false
custom_minimum_size = Vector2(76, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -5.0
offset_right = 77.0
offset_bottom = 35.0
grow_vertical = 2
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/normal_font_size = 24
text = "Lv 999"
scroll_active = false

[node name="HPProgressBar" type="TextureProgressBar" parent="HPTag/LvText"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -20.0
offset_right = 163.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
max_value = 5250.0
value = 5250.0
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_top = 16
stretch_margin_right = 16
stretch_margin_bottom = 16
texture_under = ExtResource("13_ff1jw")
texture_progress = ExtResource("14_psvf6")

[node name="HPText" type="RichTextLabel" parent="HPTag/LvText"]
clip_contents = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -20.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24
text = "5,250 / 5,250"
fit_content = true
scroll_active = false

[node name="OnAttackPos" type="Marker2D" parent="."]
gizmo_extents = 2.0

[node name="OnAssistPos" type="Marker2D" parent="."]
gizmo_extents = 2.0

[connection signal="pressed" from="ClickCombatantBtn" to="." method="_on_click_combatant_btn_pressed"]
[connection signal="toggled" from="SelectCombatantBtn" to="." method="_on_select_combatant_btn_toggled"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
